--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,19 @@
 
 </header>
 
+<body>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+  <br>
+  <br>
+  <br>
+</body>
 
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
-<p><p>
+<footer>
+  <app-bottom-bar></app-bottom-bar>
+</footer>
 
-<app-bottom-bar></app-bottom-bar>
 
 
 <!--
