--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,12 +1,15 @@
 <h2>Detalhes do Produto</h2>
 
+
+
+
 <div *ngIf="product">
   <h3>{{ product.name }}</h3>
   <h4>{{ product.price | currency }}</h4>
   <p>{{ product.description }}</p>
 
   <table>
-  <select class="form-control" type="number" [(ngModel)]="cbQuant" >
+  <select class="form-control" type="number" [(ngModel)]="product.quant" >
     <option *ngFor="let item of kgs" [ngValue]="item">
       {{item}}
     </option>
