--- a/src/app/bottom-bar/bottom-bar.component.html
+++ b/src/app/bottom-bar/bottom-bar.component.html
@@ -1,4 +1,10 @@
-<h3 align=left *ngIf="cartService.isLogged">
-TOTAL - {{ cartService.cartPrice | currency:'BRL':true }}
+
+<h3  *ngIf="cartService.isLogged">
+  TOTAL - {{ cartService.cartPrice | currency:'BRL':true }}
 </h3>
+
+<h3>
+    (41) 3083-7001
+</h3>
+
 
