--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 
-
+<body>
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm.value)">
 
   <div>
@@ -19,3 +19,4 @@
   <button class="button" type="submit">Entrar</button>
 
 </form>
+</body>
