--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,13 +1,37 @@
 
+
+<div class="row">
+  <div *ngFor="let group of groups; index as groupId" class="columngroup">
+    <div class="card">
+      <a img align="center" (mousedown)="lLoading=true" (click)="groupClick(group.name)"  [title]="group.name + ' details'" [routerLink]="['/productList']" >
+            <img align="left" src={{group.image}} alt="img" width="100px" height="60px"  border="0" style="display: block; width: '90%'" />
+            <h3 align="center">{{ group.name }} </h3>
+      </a>
+    </div>
+  </div>
+</div>
+<br>
+
+
 <div class="row">
   <div *ngFor="let product of products; index as productId" class="column">
     <div class="card">
-      <a img align="center" [title]="product.name + ' details'" [routerLink]="['/products', productId]">
-            <img align="left" src={{product.image}} alt="img" width="100" border="0" style="display: block; width: '90%'" />
+      <a img align="center" [title]="product.name + ' details'" [routerLink]="['/products', product.id]">
+            <img align="left" src={{product.image}} alt="img" width="100" height="100" border="0" style="display: block; width: '90%'" />
             <h3 align="center">{{ product.name }} </h3>
             <p>{{ product.price | currency:'BRL':true }}/Kg</p>
       </a>
     </div>
   </div>
 </div>
+
+<div *ngIf="lLoading"  class="row">
+  <div class="columnloading">
+    <div class="card">
+        <img align="center" src="../../assets/images/carregando.gif" />
+    <div>
+  </div>
+</div>
+
+
 
